--- a/play-video3.html
+++ b/play-video3.html
@@ -61,7 +61,7 @@
                 </script>
             </div>
             <div class="vid-description">
-                <p>Channel that makes learning easy</p>
+                <p>Channel that makes .....</p>
                 <p>Subscribe to channel for more videos</p>
                 <hr>
                 <h4>2 Comments</h4>
